change title on both pages

--- a/showdates.html
+++ b/showdates.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AUXO Website</title>
+  <title>AUXO.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     /* Your existing styles here */
