--- a/index.html
+++ b/index.html
@@ -9,7 +9,99 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <style>
-        /* Your CSS styles here */
+        body {
+            font-family: 'Helvetica Neue', sans-serif;
+            background-color: yellow;
+            background-image: url('corn-eating.gif'); /* Replace 'corn-eating.gif' with your GIF file */
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+        }
+        h1 {
+            font-size: 44px;
+            color: black;
+            font-weight: bold;
+            text-align: center;
+            opacity: 0;
+            animation: fade-in-aux 2s ease-in-out 3s forwards;
+            cursor: pointer;
+        }
+        #countdown {
+            font-family: 'Arial', sans-serif;
+            font-size: 80px; /* Increased font size for countdown */
+            color: black;
+            font-weight: bold;
+            text-align: left; /* Align left */
+            margin-bottom: 20px;
+            opacity: 0;
+            animation: fade-in-timer 2s ease-in-out forwards;
+        }
+        #slcdnb {
+            font-family: 'Arial', sans-serif;
+            font-size: 12px;
+            color: #333;
+            opacity: 0;
+            animation: fade-in-slcdnb 2s ease-in-out 5s forwards;
+        }
+
+        /* CSS animations for fading in */
+        @keyframes fade-in-timer {
+            0% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
+        }
+        @keyframes fade-in-aux {
+            0% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
+        }
+        @keyframes fade-in-slcdnb {
+            0% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
+        }
+
+        /* Flash on hover with a faster animation */
+        h1:hover {
+            animation: flash-super-fast 0.1s infinite alternate;
+        }
+
+        @keyframes flash-super-fast {
+            0% {
+                opacity: 1;
+            }
+            100% {
+                opacity: 0;
+            }
+        }
+
+        /* Mobile-friendly adjustments */
+        @media screen and (max-width: 600px) {
+            h1 {
+                font-size: 24px; /* Adjust font size for smaller screens */
+            }
+            #countdown {
+                font-size: 50px; /* Adjust font size for smaller screens */
+            }
+            #slcdnb {
+                font-size: 10px; /* Adjust font size for smaller screens */
+            }
+        }
     </style>
 </head>
 <body>
@@ -33,8 +125,8 @@
             const seconds = Math.floor((distance % (1000 * 60)) / 1000);
             const milliseconds = Math.floor(distance % 1000);
 
-            // Display the countdown in the format: days:hours:minutes:seconds:milliseconds
-            document.getElementById("countdown").innerHTML = `${days}:${hours}:${minutes}:${seconds}:${milliseconds}`;
+            // Display the countdown in the format: days.hours.minutes.seconds.milliseconds
+            document.getElementById("countdown").innerHTML = `${days}:${hours}:${minutes}:${seconds}.${milliseconds}`;
 
             // If the countdown is over, display a message
             if (distance < 0) {
