--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 </head>
 <body>
     <div id="countdown"></div>
-    <h1 onclick="window.location.href='https://www.instagram.com/reel/CqLxB-qA_AG/'">AUXILIARY</h1>
+    <h1 onclick="window.location.href='https://www.instagram.com/reel/CqLxB-qA_AG/'">TILL AUXILIARY</h1>
     <div id="slcdnb">SLCDNB®</div>
 
     <script>
