--- a/index.html
+++ b/index.html
@@ -13,20 +13,23 @@
   margin: 0;
   padding: 20px;
   text-align: center;
-  background-color: white;
-  animation: rainbow-background 0.1s linear infinite; /* Decreased duration to 0.1 seconds */
+  background-color: yellow; /* Set the background color to yellow */
+  animation: rainbow-background 0.1s linear infinite;
 }
 
 @keyframes rainbow-background {
-  0% { background-color: black; }
-  14% { background-color: orange; }
+  0% { background-color: yellow; } /* Set the initial background color to yellow */
+  14% { background-color: yellow; }
   28% { background-color: yellow; }
-  42% { background-color: green; }
-  57% { background-color: blue; }
-  71% { background-color: indigo; }
-  85% { background-color: violet; }
-  100% { background-color: red; }
+  42% { background-color: yellow; }
+  57% { background-color: yellow; }
+  71% { background-color: yellow; }
+  85% { background-color: yellow; }
+  100% { background-color: yellow; }
 }
+
+/* ... rest of your CSS code ... */
+
 
 /* ... rest of your CSS code ... */
 
