--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AUXO - Rainbow Strobe</title>
+  <title>AUXO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
    body {
