--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ In this code, the .footer class has been updated to set the text color to white,
 
   <ul>
     <li><a href="https://ffm.to/auxiliary-">LISTEN TO AUXO</a></li>
-    <li><a href="showdates.html">SHOW DATES</a></li>
+    <li><a href="https://www.instagram.com/benauxo/">INSTAGRAM</a></li>
     <li><a href="https://www.youtube.com/channel/UCe62ClyuCL4p-BwABEvnmMw">YOUTUBE</a></li>
     <li><a href="https://benauxo.bandcamp.com/album/auxiliary">MERCH</a></li>
   </ul>
