--- a/index.html
+++ b/index.html
@@ -71,14 +71,12 @@ In this code, the .footer class has been updated to set the text color to white,
 
 
   <ul>
-    <li><a href="https://ffm.to/auxiliary-">LISTEN TO AUXO</a></li>
-    <li><a href="https://www.instagram.com/benauxo/">INSTAGRAM</a></li>
-    <li><a href="https://www.youtube.com/channel/UCe62ClyuCL4p-BwABEvnmMw">YOUTUBE</a></li>
-    <li><a href="https://benauxo.bandcamp.com/album/auxiliary">MERCH</a></li>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/wVnh1z3kAPE?si=CmlANT15aMKz2LKR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  
   </ul>
 
   <div class="footer">
-    SLCDNB RECORDS INC
+   
   </div>
 </body>
 </html>
