--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@ In this code, the .footer class has been updated to set the text color to white,
 
 
   <ul>
-    <iframe width="560" height="315" src="https://youtu.be/vNoyYgjrSMk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-  
+<iframe width="560" height="315" src="https://www.youtube.com/embed/vNoyYgjrSMk?si=PuJTrgU6dyyeqRL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  
   </ul>
 
   <div class="footer">
