--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@ body {
   padding: 20px;
   text-align: center;
   background-color: yellow;
-  animation: rainbow-background 0.1s linear infinite;
+  background-image: url("leaves.jpg");
+  /* animation: rainbow-background 0.1s linear infinite; */
 }
 
-@keyframes rainbow-background {
+/* @keyframes rainbow-background {
   0% { background-color: yellow; }
   14% { background-color: yellow; }
   28% { background-color: yellow; }
@@ -26,7 +27,7 @@ body {
   71% { background-color: yellow; }
   85% { background-color: yellow; }
   100% { background-color: yellow; }
-}
+} */
 
 ul {
   padding: 0;
