--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ In this code, the .footer class has been updated to set the text color to white,
 
   <ul>
 <audio controls>
-  <source src="ride2school.m4a" type="audio/=m4a">
+  <source src="ride2school.m4a" type="audio/x-m4a">
 Your browser does not support the audio element.
 </audio>  </ul>
 
