--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@ body {
   padding: 20px;
   text-align: center;
   background-color: yellow;
-  background-image: url("leaves.jpg");
+  background: url(leaves.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   /* animation: rainbow-background 0.1s linear infinite; */
 }
 
