--- a/index.html
+++ b/index.html
@@ -13,25 +13,8 @@ body {
   margin: 0;
   padding: 20px;
   text-align: center;
-  background-color: yellow;
-  background: url(leaves.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  /* animation: rainbow-background 0.1s linear infinite; */
+  background-color: white; /* Set background color to white */
 }
-
-/* @keyframes rainbow-background {
-  0% { background-color: yellow; }
-  14% { background-color: yellow; }
-  28% { background-color: yellow; }
-  42% { background-color: yellow; }
-  57% { background-color: yellow; }
-  71% { background-color: yellow; }
-  85% { background-color: yellow; }
-  100% { background-color: yellow; }
-} */
 
 ul {
   padding: 0;
@@ -41,6 +24,17 @@ ul {
 
 li {
   margin-bottom: 10px;
+  opacity: 0;
+  animation: fade-in 0.5s forwards; /* Apply fade-in animation */
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 a {
@@ -65,28 +59,22 @@ a:hover {
   font-size: 12px;
   margin-top: 20px;
   color: black; /* Set text color to black */
+  opacity: 0;
+  animation: fade-in 0.4s forwards; /* Apply fade-in animation */
+  animation-delay: 1.3s; /* Add a 0.3s delay to the animation */
 }
-
-
-In this code, the .footer class has been updated to set the text color to white, making the "SLCDNB RECORDS INC" text appear in white color.
-
   </style>
 </head>
 <body>
-
-
   <ul>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/vNoyYgjrSMk?si=PuJTrgU6dyyeqRL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  
+    <li><a href="https://ffm.to/auxiliary-">LISTEN TO AUXO</a></li>
+    <li style="animation-delay: 0.3s;"><a href="https://www.instagram.com/benauxo/">INSTAGRAM</a></li>
+    <li style="animation-delay: 0.6s;"><a href="https://www.youtube.com/channel/UCe62ClyuCL4p-BwABEvnmMw">YOUTUBE</a></li>
+    <li style="animation-delay: 0.9s;"><a href="https://benauxo.bandcamp.com/album/auxiliary">MERCH</a></li>
   </ul>
 
-  <ul>
-<audio controls>
-  <source src="ride2school.m4a" type="audio/x-m4a">
-Your browser does not support the audio element.
-</audio>  </ul>
-
   <div class="footer">
-   
+    SLCDNB RECORDS INC
   </div>
 </body>
 </html>
