--- a/index.html
+++ b/index.html
@@ -1,92 +1,2 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>AUXO</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  margin: 0;
-  padding: 20px;
-  text-align: center;
-  background-color: yellow;
-  background: url(leaves.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  /* animation: rainbow-background 0.1s linear infinite; */
-}
-
-/* @keyframes rainbow-background {
-  0% { background-color: yellow; }
-  14% { background-color: yellow; }
-  28% { background-color: yellow; }
-  42% { background-color: yellow; }
-  57% { background-color: yellow; }
-  71% { background-color: yellow; }
-  85% { background-color: yellow; }
-  100% { background-color: yellow; }
-} */
-
-ul {
-  padding: 0;
-  list-style: none;
-  margin-top: 10px;
-}
-
-li {
-  margin-bottom: 10px;
-}
-
-a {
-  font-size: 40px;
-  color: black; /* Set text color to black */
-  text-decoration: none;
-  font-weight: bold;
-  transition: color 0.3s;
-}
-
-a:hover {
-  animation: strobe 0.1s infinite;
-}
-
-@keyframes strobe {
-  0% { color: black; }
-  50% { color: white; }
-  100% { color: black; }
-}
-
-.footer {
-  font-size: 12px;
-  margin-top: 20px;
-  color: black; /* Set text color to black */
-}
-
-
-In this code, the .footer class has been updated to set the text color to white, making the "SLCDNB RECORDS INC" text appear in white color.
-
-  </style>
-</head>
-<body>
-
-
-  <ul>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/vNoyYgjrSMk?si=PuJTrgU6dyyeqRL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  
-  </ul>
-
-  <ul>
-<audio controls>
-  <source src="ride2school.m4a" type="audio/x-m4a">
-Your browser does not support the audio element.
-</audio>  </ul>
-
-  <div class="footer">
-   
-  </div>
-</body>
+index.html
 </html>
