--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
       <li><a href="https://ffm.to/auxiliary-">LISTEN TO AUXO</a></li>
       <li style="animation-delay: 0.3s;"><a href="https://www.instagram.com/benauxo/">INSTAGRAM</a></li>
       <li style="animation-delay: 0.6s;"><a href="https://www.youtube.com/channel/UCe62ClyuCL4p-BwABEvnmMw">YOUTUBE</a></li>
+       <li style="animation-delay: 0.75s;"><a href="https://soundcloud.com/benauxo">SOUNDCLOUD</a></li>
       <li style="animation-delay: 0.9s;"><a href="https://benauxo.bandcamp.com/album/auxiliary">MERCH</a></li>
     </ul>
 
