--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <div id="snow-container"></div>
 
   <script>
-    // Paste your p5.js code here
+    // Paste your p5.js code 
     let snowflakes = [];
 
     function setup() {
