--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
 
   <div id="snow-container"></div>
 
+  <audio src="song.mp3" autoplay loop></audio> <!-- Add this line to play the background song -->
+
   <script>
     // Paste your p5.js code 
     let snowflakes = [];
