--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
       font-weight: bold;
       transition: color 0.3s;
       z-index: 2; /* Ensure links are above canvas */
+      text-shadow: 
+        -1px -1px 0 #000,  
+         1px -1px 0 #000,
+        -1px  1px 0 #000,
+         1px  1px 0 #000; /* Creates a black outline around the text */
     }
 
     a:hover {
@@ -74,6 +79,11 @@
       animation: fade-in 0.4s forwards; /* Apply fade-in animation */
       animation-delay: 1.3s; /* Add a 0.3s delay to the animation */
       z-index: 2; /* Ensure footer is above canvas */
+      text-shadow: 
+        -1px -1px 0 #000,  
+         1px -1px 0 #000,
+        -1px  1px 0 #000,
+         1px  1px 0 #000; /* Creates a black outline around the footer text */
     }
 
     #snow-container {
