--- a/music_editing.html
+++ b/music_editing.html
@@ -85,11 +85,11 @@
         <p class="description">Hi! I'm here to help you craft the perfect sound. Whether you're an artist, podcaster, or just need some audio magic, I've got you covered. I can also cut up songs for dance and cheer routines to make them perfect for your performances. Reach out to me today!</p>
         <div class="contact-info">
             <p>Call or Text: 435-680-6264</p>
-            <p>Email: auxodnb@gmail.com</p>
+            <p>Email: benjidavie@gmail.com</p>
         </div>
         <div class="link-container">
             <a href="sms:4356806264">Text Me</a>
-            <a href="mailto:auxodnb@gmail.com">Email Me</a>
+            <a href="mailto:benjidavie@gmail.com">Email Me</a>
         </div>
     </main>
     <footer>
