--- a/shirts.html
+++ b/shirts.html
@@ -23,6 +23,8 @@
             font-weight: bold;
             color: #fff;
             z-index: 10;
+        
+            pointer-events: none; /* Prevents text from being grabbed */
         }
     </style>
 </head>
