--- a/rock.html
+++ b/rock.html
@@ -1,13 +1,25 @@
+<style>
+  html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow: hidden;
+  }
+  .sketchfab-embed-wrapper, .sketchfab-embed-wrapper iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
+</style>
+
 <div class="sketchfab-embed-wrapper">
-  <iframe title="rock downsampled" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" 
+  <iframe 
+    title="rock downsampled"
+    allowfullscreen 
+    mozallowfullscreen="true" 
+    webkitallowfullscreen="true" 
     allow="autoplay; fullscreen; xr-spatial-tracking" 
     xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share 
-    src="https://sketchfab.com/models/7a27147c10bf4d01aaf386e11118dc7c/embed" 
-    width="640" height="480">
+    src="https://sketchfab.com/models/7a27147c10bf4d01aaf386e11118dc7c/embed">
   </iframe>
-  <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
-    <a href="https://sketchfab.com/3d-models/rock-downsampled-7a27147c10bf4d01aaf386e11118dc7c" target="_blank" style="font-weight: bold; color: #1CAAD9;">rock downsampled</a> 
-    by <a href="https://sketchfab.com/benjidavie" target="_blank" style="font-weight: bold; color: #1CAAD9;">benjidavie</a> 
-    on <a href="https://sketchfab.com" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
-  </p>
 </div>
