--- a/rock.html
+++ b/rock.html
@@ -23,3 +23,11 @@
     src="https://sketchfab.com/models/7a27147c10bf4d01aaf386e11118dc7c/embed">
   </iframe>
 </div>
+
+<p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
+  <a href="https://sketchfab.com/3d-models/rock-downsampled-7a27147c10bf4d01aaf386e11118dc7c" target="_blank" style="font-weight: bold; color: #1CAAD9;">
+    rock downsampled
+  </a> 
+  by <a href="https://sketchfab.com/benjidavie" target="_blank" style="font-weight: bold; color: #1CAAD9;">benjidavie</a> 
+  on <a href="https://sketchfab.com" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
+</p>
