--- a/portfolio.html
+++ b/portfolio.html
@@ -129,8 +129,50 @@
       text-align: center;
     }
 
+    /* Mobile video section layout */
+    .mobile-sections {
+      display: none;
+      flex-direction: column;
+    }
+
+    .mobile-section {
+      position: relative;
+      height: 50vh;
+      overflow: hidden;
+    }
+
+    .mobile-section video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .mobile-label {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+      font-size: 2rem;
+      font-weight: bold;
+      text-align: center;
+      z-index: 2;
+      text-shadow: 1px 1px 3px black;
+    }
+
     #bottom {
       height: 1px;
+    }
+
+    /* Mobile styles */
+    @media (max-width: 768px) {
+      .grid {
+        display: none;
+      }
+
+      .mobile-sections {
+        display: flex;
+      }
     }
   </style>
 </head>
@@ -149,7 +191,7 @@
     <div class="scroll-arrow">↓</div>
   </div>
 
-  <!-- Portfolio Grid -->
+  <!-- Desktop Grid -->
   <div class="grid">
     <a class="section" href="personal.html">
       <div class="label">Personal</div>
@@ -174,6 +216,34 @@
       <video autoplay muted loop playsinline>
         <source src="grit.mp4" type="video/mp4" />
       </video>
+    </a>
+  </div>
+
+  <!-- Mobile Video List -->
+  <div class="mobile-sections">
+    <a class="mobile-section" href="personal.html">
+      <video autoplay muted loop playsinline>
+        <source src="personal.mp4" type="video/mp4" />
+      </video>
+      <div class="mobile-label">Personal</div>
+    </a>
+    <a class="mobile-section" href="https://auxo.love/rock" target="_blank">
+      <video autoplay muted loop playsinline>
+        <source src="research.mp4" type="video/mp4" />
+      </video>
+      <div class="mobile-label">Research</div>
+    </a>
+    <a class="mobile-section" href="physical.html">
+      <video autoplay muted loop playsinline>
+        <source src="physical.mp4" type="video/mp4" />
+      </video>
+      <div class="mobile-label">Physical Pieces</div>
+    </a>
+    <a class="mobile-section" href="grit.html">
+      <video autoplay muted loop playsinline>
+        <source src="grit.mp4" type="video/mp4" />
+      </video>
+      <div class="mobile-label">Grit</div>
     </a>
   </div>
 
